1.1.8/1.0.9 - xxxxxxxxxxxxx
===========================
* Added methods to compress data via create() and setData() and to decompress data via getData(). The
compression is GZIP by default. You can change this via the CuratorFrameworkFactory by specifying
a CompressionProvider.

* Added ZookeeperFactory to the client as a testing aid.

1.1.7/1.0.8 - April 6, 2012
===========================
* Accepted a change so that testng is testCompile in Gradle

* Rewrote TestingServer and TestingCluster based on work by Jeremie BORDIER (ahfeel)

* Rewrote the log4j property files

* Moved to ZK 3.4.3

* More work on the Exhibitor integration

1.1.5/1.0.6 - March 23, 2012
============================
* Moved to Gradle as the build system.

* Added SimpleDistributedQueue, a drop-in replacement for the DistributedQueue that comes with the
ZK distribution.

* IMPORTANT CHANGE TO LeaderSelector. Previous versions of Curator overloaded the start() method
to allow re-queueing. THIS IS NO LONGER SUPPORTED. Instead, there is a new method, requeue(), that
does this. Calling start() more than once will now throw an exception.

* LeaderSelector now supports auto re-queueing. In previous versions, it wasn't trivial to requeue
the instance. Now, make a call to autoRequeue() to put the instance in a mode where it will requeue
itself when the leader selector listener returns.

* The mechanism that calls any kind of Curator listener wasn't protected against exceptions. Thus,
an exception in a listener could break the listener event thread.

* deleteDirectoryContents() no longer checks for sym links. This was a major issue in the Guava
version and possibly one of the reasons they removed the method altogether.

1.1.4/1.0.5 - March 12, 2012
============================
* Introduced a parent interface for Queues so that they can have some common methods

* Added new Recipe: DistributedIdQueue - a version of DistributedQueue that allows IDs to be